--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_doctor %>
-  <%= link_to 'Sign Out', destroy_doctor_session_path %>
+  <%= link_to 'Sign Out', destroy_doctor_session_path, method: "delete" %>
 <% else %>
   <%= link_to 'Sign In', new_doctor_session_path %>
 <% end %>
